Navbar button design added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
     <header>
+        <nav class="navbar">
+            <div class="navbar-section-1">
+                <h2 class="navbar-title">Fitness</h2>
+            </div>
+            <div class="navbar-section-2">
+                <ul class="navbar-option">
+                    <li><button class="navbar-button">Home</button></li>
+                    <li><button class="navbar-button">Service</button></li>
+                    <li><button class="navbar-button">Contact</button></li>
+                    <li><button class="navbar-button">About</button></li>
+                </ul>
+            </div>
+        </nav>
 
     </header>
     <main>
