Navbar design done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-section-1">
-                <h2 class="navbar-title">Fitness</h2>
+                <h2 class="navbar-title"><i>Fitness</i></h2>
             </div>
             <div class="navbar-section-2">
                 <ul class="navbar-option">
