banner section working on small box

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <!-- Navbar section stars here -->
         <nav class="navbar">
             <div class="navbar-section-1">
                 <h2 class="navbar-title"><i>Fitness</i></h2>
@@ -24,9 +25,37 @@
                 </ul>
             </div>
         </nav>
-
     </header>
     <main>
+        <!-- Banner section -->
+        <section>
+            <div class="banner">
+                <div class="banner-section-1">
+                    <h1 class="banner-title">Get body in <br><span class="shape">shape</span> & stay<br>healthy</h1>
+                    <p class="banner-description">A huge selection of health and fitness content, healthy recipes<br>and
+                        transformation stories to help you get fit and stay fit!</p>
+                    <button class="banner-button">Join Club Now!</button>
+                    <button class="banner-button">Download App</button>
+                </div>
+                <div class="banner-section-2">
+                    <img src="images/Images 2.png" alt="">
+                    <div class="box-1">
+                        <div>
+                            <button class="ring-button"></button>
+                        </div>
+                        <div class="tutorial">
+                            <h2>350+</h2>
+                            <p>Video tutorial</p>
+                        </div>
+                    </div>
+                    <div class="tutorial-video">
+                        <h2>500+</h2>
+                        <p>Free Workout video</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
