--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
                 </div>
                 <div class="banner-section-2">
                     <img src="images/Images 2.png" alt="">
-                    <div class="box-1">
+                    <div class="main-box">
                         <div>
-                            <button class="ring-button"></button>
+                            <button class="circle"></button>
                         </div>
-                        <div class="tutorial">
-                            <h2>350+</h2>
-                            <p>Video tutorial</p>
+                        <div class="box-1">
+                            <h2 class="box-1-title">350+</h2>
+                            <p class="box-1-description">Video tutorial</p>
                         </div>
                     </div>
-                    <div class="tutorial-video">
-                        <h2>500+</h2>
-                        <p>Free Workout video</p>
+                    <div class="box-2">
+                        <h2 class="box-2-title">500</h2>
+                        <p class="box-2-description">video</p>
                     </div>
                 </div>
             </div>
