making responsive for small device

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Fitness</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/8f6dc4d4e3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -18,10 +19,15 @@
             </div>
             <div class="navbar-section-2">
                 <ul class="navbar-option">
-                    <li><button class="navbar-button">Home</button></li>
+                    <li><a class="navbar-button" href="">Home</a></li>
+                    <li><a class="navbar-button" href="">Service</a></li>
+                    <li><a class="navbar-button" href="">Contact</a></li>
+                    <li><a class="navbar-button" href="">About</a></li>
+                    <img class="icon" src="images/download.png" alt="">
+                    <!-- <li><button class="navbar-button">Home</button></li>
                     <li><button class="navbar-button">Service</button></li>
                     <li><button class="navbar-button">Contact</button></li>
-                    <li><button class="navbar-button">About</button></li>
+                    <li><button class="navbar-button">About</button></li> -->
                 </ul>
             </div>
         </nav>
@@ -34,11 +40,17 @@
                     <h1 class="banner-title">Get body in <br><span class="shape">shape</span> & stay<br>healthy</h1>
                     <p class="banner-description">A huge selection of health and fitness content, healthy recipes<br>and
                         transformation stories to help you get fit and stay fit!</p>
-                    <button class="banner-button">Join Club Now!</button>
-                    <button class="banner-button">Download App</button>
+                    <div class="banner-main-button">
+                        <div>
+                            <button class="banner-button">Join Club Now!</button>
+                        </div>
+                        <div>
+                            <button class="banner-button">Download App</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="banner-section-2">
-                    <img src="images/Images 2.png" alt="">
+                    <img class="trainer" src="images/Images 2.png" alt="">
                     <div class="main-box">
                         <div>
                             <button class="circle"></button>
@@ -49,8 +61,8 @@
                         </div>
                     </div>
                     <div class="box-2">
-                        <h2 class="box-2-title">500</h2>
-                        <p class="box-2-description">video</p>
+                        <h2 class="box-2-title">500+</h2>
+                        <p class="box-2-description">Free Workout videos</p>
                     </div>
                 </div>
             </div>
