Habit section html and css structure builing up

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <main>
-        <!-- Banner section -->
+        <!-- Banner section starts here -->
         <section>
             <div class="banner">
                 <div class="banner-section-1">
@@ -64,7 +64,36 @@
             </div>
 
         </section>
-
+        <!-- Change your habit section starts here -->
+        <section>
+            <div class="habit-section-1">
+                <h1 class="habit-title">Change Your Habits</h1>
+                <p class="habit-description">We believe fitness should be accessible to everyone, everywhere, regardless
+                    of income or<br>access to a gym.</p>
+            </div>
+            <div class="habit-section-2">
+                <div class="habit-card">
+                    <img class="habit-image" src="images/image 3.png" alt="">
+                    <h5>Movement</h5>
+                    <p>We believe fitness should be<br>accessible to everyone</p>
+                </div>
+                <div class="habit-card">
+                    <img class="habit-image" src="images/image 2.png" alt="">
+                    <h5>Movement</h5>
+                    <p>We believe fitness should be<br>accessible to everyone</p>
+                </div>
+                <div class="habit-card">
+                    <img class="habit-image" src="images/image 4.png" alt="">
+                    <h5>Movement</h5>
+                    <p>We believe fitness should be<br>accessible to everyone</p>
+                </div>
+                <div class="habit-card">
+                    <img class="habit-image" src="images/image 5.png" alt="">
+                    <h5>Movement</h5>
+                    <p>We believe fitness should be<br>accessible to everyone</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
