--- a/index.html
+++ b/index.html
@@ -74,23 +74,23 @@
             <div class="habit-section-2">
                 <div class="habit-card">
                     <img class="habit-image" src="images/image 3.png" alt="">
-                    <h5>Movement</h5>
-                    <p>We believe fitness should be<br>accessible to everyone</p>
+                    <h5 class="card-title">Movement</h5>
+                    <p class="card-description">We believe fitness should be<br>accessible to everyone</p>
                 </div>
                 <div class="habit-card">
                     <img class="habit-image" src="images/image 2.png" alt="">
-                    <h5>Movement</h5>
-                    <p>We believe fitness should be<br>accessible to everyone</p>
+                    <h5 class="card-title">Movement</h5>
+                    <p class="card-description">We believe fitness should be<br>accessible to everyone</p>
                 </div>
                 <div class="habit-card">
                     <img class="habit-image" src="images/image 4.png" alt="">
-                    <h5>Movement</h5>
-                    <p>We believe fitness should be<br>accessible to everyone</p>
+                    <h5 class="card-title">Movement</h5>
+                    <p class="card-description">We believe fitness should be<br>accessible to everyone</p>
                 </div>
                 <div class="habit-card">
                     <img class="habit-image" src="images/image 5.png" alt="">
-                    <h5>Movement</h5>
-                    <p>We believe fitness should be<br>accessible to everyone</p>
+                    <h5 class="card-title">Movement</h5>
+                    <p class="card-description">We believe fitness should be<br>accessible to everyone</p>
                 </div>
             </div>
         </section>
