Runsection background positioning

--- a/index.html
+++ b/index.html
@@ -99,12 +99,13 @@
                 <div class="run-section-1">
                     <h1 class="run-title">Run an Extra<br>
                         Mile Easily</h1>
-                    <p class="run-description">We believe fitness should be accessible to everyone,<br>everywhere, regardless of income or access
+                    <p class="run-description">We believe fitness should be accessible to everyone,<br>everywhere,
+                        regardless of income or access
                         to a gym. With<br>hundreds of professional workouts.</p>
-                    <button class="run-button">Join Now</button>
+                    <div class="join-now-button"><button class="run-button">Join Now</button></div>
                 </div>
                 <div class="run-section-2">
-                    <!-- <img class="run-image" src="images/run.jpg" alt=""> -->
+                    <img class="run-image" src="images/run (1).jpg" alt="">
                 </div>
             </div>
         </section>
