Run section responsive almost done but need some polishing

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 </div>
                 <div class="run-section-2">
                     <img class="run-image" src="images/run (1).jpg" alt="">
+                    <img class="run-image-1" src="images/run (2).jpg" alt="">
                 </div>
             </div>
         </section>
