Working on bmi section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 </div>
             </div>
         </section>
+        <!-- Run section starts here -->
         <section>
             <div class="run-section">
                 <div class="run-section-1">
@@ -107,6 +108,26 @@
                 <div class="run-section-2">
                     <img class="run-image" src="images/run (1).jpg" alt="">
                     <img class="run-image-1" src="images/run (2).jpg" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- BMI Calculator starts here -->
+        <section>
+            <div>
+                <div class="bmi-container">
+                    <h1 class="bmi-title">BMI Calculator</h1>
+                    <p class="bmi-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                </div>
+                <div>
+                    <div>
+                        <table>
+
+
+                        </table>
+                    </div>
+                    <div>
+
+                    </div>
                 </div>
             </div>
         </section>
