--- a/index.html
+++ b/index.html
@@ -116,13 +116,35 @@
             <div>
                 <div class="bmi-container">
                     <h1 class="bmi-title">BMI Calculator</h1>
-                    <p class="bmi-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                    <p class="bmi-description">We believe fitness should be accessible to everyone, everywhere,
+                        regardless of income or access to a gym.</p>
                 </div>
                 <div>
                     <div>
+                        <h1 class="bmi-table">BMI Calculator Chart</h1>
                         <table>
-
-
+                            <tbody>
+                                <tr>
+                                    <td class="table-title">BMI</td>
+                                    <td class="table-title">Weight Status</td>
+                                </tr>
+                                <tr class="table-cell">
+                                    <td>Below 18.5</td>
+                                    <td>Underweight</td>
+                                </tr>
+                                <tr class="table-cell">
+                                    <td>18.5 - 24.9</td>
+                                    <td>Healthy</td>
+                                </tr>
+                                <tr class="table-cell">
+                                    <td>25.0 - 29.9</td>
+                                    <td>Overweight</td>
+                                </tr>
+                                <tr class="table-cell">
+                                    <td>30.0 - and Above</td>
+                                    <td>Obese</td>
+                                </tr>
+                            </tbody>
                         </table>
                     </div>
                     <div>
