Working on meet out team section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                     <li><a class="navbar-button" href="">Service</a></li>
                     <li><a class="navbar-button" href="">Contact</a></li>
                     <li><a class="navbar-button" href="">About</a></li>
-                    <img class="icon" src="images/download.png" alt="">
+                    <!-- <img style="filter: invert(1);" class="icon" src="images/download.png" alt="" > -->
+                    <i class="fa-solid fa-bars icon"></i>
                 </ul>
             </div>
         </nav>
@@ -34,7 +35,7 @@
             <div class="banner">
                 <div class="banner-section-1">
                     <h1 class="banner-title">Get body in <br><span class="shape">shape</span> & stay<br>healthy</h1>
-                    <p class="banner-description">A huge selection of health and fitness content, healthy recipes<br>and
+                    <p class="banner-description">A huge selection of health and fitness content, healthy recipes and
                         transformation stories to help you get fit and stay fit!</p>
                     <div class="banner-main-button">
                         <div>
@@ -169,6 +170,13 @@
                         <input class="calculate-bmi-button" type="submit" value="Calculate">
                     </form>
                 </div>
+            </div>
+        </section>
+        <!-- Meet Out Team Section starts here -->
+        <section>
+            <div>
+                <h1>Meet Our Team</h1>
+                <p></p>
             </div>
         </section>
     </main>
