trainer image added and positioning complete

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="banner">
                 <div class="banner-section-1">
                     <h1 class="banner-title">Get body in <br><span class="shape">shape</span> & stay<br>healthy</h1>
-                    <p class="banner-description">A huge selection of health and fitness content, healthy recipes and
+                    <p class="banner-description">A huge selection of health and fitness content, healthy recipes and <br>
                         transformation stories to help you get fit and stay fit!</p>
                     <div class="banner-main-button">
                         <div>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="banner-section-2">
-                    <img class="trainer" src="images/Images 2.png" alt="">
+                    <img class="banner-trainer" src="images/Images 2.png" alt="">
                     <div class="main-box">
                         <div>
                             <button class="circle"></button>
@@ -152,7 +152,7 @@
                     <p class="bmi-calculator-description">We believe fitness should be accessible to everyone,
                         everywhere, regardless of <br> income or
                         access to a gym. </p>
-                    <form >
+                    <form>
                         <div class="bmi-calculator-input">
                             <input type="number" placeholder="Height/cm">
                             <input type="number" placeholder="Weight/kg">
@@ -174,9 +174,36 @@
         </section>
         <!-- Meet Out Team Section starts here -->
         <section>
-            <div>
-                <h1>Meet Our Team</h1>
-                <p></p>
+            <div class="meet-out-team">
+                <h1 class="meet-title">Meet Our Team</h1>
+                <p class="meet-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym.</p>
+            </div>
+            <div class="trainer-image-card">
+                <div class="trainer-1 trainer">
+                    <h1>Jerome Bell</h1>
+                    <p>Trainer</p>
+                </div>
+                <div class="trainer-2 trainer">
+                    <h1>Jerome Bell</h1>
+                    <p>Trainer</p>
+                </div>
+                <div class="trainer-3 trainer">
+                    <h1>Jerome Bell</h1>
+                    <p>Trainer</p>
+                </div>
+                <div class="trainer-4 trainer">
+                    <h1>Jerome Bell</h1>
+                    <p>Trainer</p>
+                </div>
+                <div class="trainer-5 trainer">
+                    <h1>Jerome Bell</h1>
+                    <p>Trainer</p>
+                </div>
+                <div class="trainer-6 trainer">
+                    <h1>Jerome Bell</h1>
+                    <p>Trainer</p>
+                </div>
             </div>
         </section>
     </main>
