footer section done working on challange part

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
             <div class="banner">
                 <div class="banner-section-1">
                     <h1 class="banner-title">Get body in <br><span class="shape">shape</span> & stay<br>healthy</h1>
-                    <p class="banner-description">A huge selection of health and fitness content, healthy recipes and <br>
-                        transformation stories to help you get fit and stay fit!</p>
+                    <p class="banner-description">A huge selection of health and fitness content, healthy recipes and
+                        <br>
+                        transformation stories to help you get fit and stay fit!
+                    </p>
                     <div class="banner-main-button">
                         <div>
                             <button class="banner-button">Join Club Now!</button>
@@ -172,43 +174,79 @@
                 </div>
             </div>
         </section>
-        <!-- Meet Out Team Section starts here -->
+        <!-- Meet Out Team section starts here -->
         <section>
             <div class="meet-out-team">
                 <h1 class="meet-title">Meet Our Team</h1>
-                <p class="meet-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                <p class="meet-description">We believe fitness should be accessible to everyone, everywhere, regardless
+                    of income or access to a
                     gym.</p>
             </div>
             <div class="trainer-image-card">
                 <div class="trainer-1 trainer">
-                    <h1>Jerome Bell</h1>
-                    <p>Trainer</p>
+                    <h1 class="trainer-name">Jerome Bell</h1>
+                    <p class="trainer-position">Trainer</p>
                 </div>
                 <div class="trainer-2 trainer">
-                    <h1>Jerome Bell</h1>
-                    <p>Trainer</p>
+                    <h1 class="trainer-name">Jerome Bell</h1>
+                    <p class="trainer-position">Trainer</p>
                 </div>
                 <div class="trainer-3 trainer">
-                    <h1>Jerome Bell</h1>
-                    <p>Trainer</p>
+                    <h1 class="trainer-name">Jerome Bell</h1>
+                    <p class="trainer-position">Trainer</p>
                 </div>
                 <div class="trainer-4 trainer">
-                    <h1>Jerome Bell</h1>
-                    <p>Trainer</p>
+                    <h1 class="trainer-name">Jerome Bell</h1>
+                    <p class="trainer-position">Trainer</p>
                 </div>
                 <div class="trainer-5 trainer">
-                    <h1>Jerome Bell</h1>
-                    <p>Trainer</p>
+                    <h1 class="trainer-name">Jerome Bell</h1>
+                    <p class="trainer-position">Trainer</p>
                 </div>
                 <div class="trainer-6 trainer">
-                    <h1>Jerome Bell</h1>
-                    <p>Trainer</p>
+                    <h1 class="trainer-name">Jerome Bell</h1>
+                    <p class="trainer-position">Trainer</p>
                 </div>
+            </div>
+        </section>
+        <!-- Membership section starts here -->
+        <section>
+            <div>
+                <h1 class="fitness" style="text-align: center; background-color: #FFFFFF80; text-shadow: 2px 2px 5px black;" ><i>Fitness Membership</i></h1>
+            </div>
+            <div class="membership-card">
+                <h2>Pass'Trial'</h2>
+                <h2>$0</h2>
+                <h3></h3>
+                <h3></h3>
+                <button type="button">Buy</button>
             </div>
         </section>
     </main>
     <footer>
-
+        <div class="fitness-section">
+            <div class="fitness-margin">
+                <h1 class="fitness"><i>Fitness</i></h1>
+                <p class="fitness-description">We believe fitness should be accessible to everyone,<br>everywhere,
+                    regardless of income or access to
+                    a
+                    gym. With<br>hundreds of professional workouts.</p>
+            </div>
+            <div class="fitness-margin">
+                <h2 class="fitness-title">Get Started</h2>
+                <h4 class="fitness-title-description">Service</h4>
+                <h4 class="fitness-title-description">Contact Us</h4>
+                <h4 class="fitness-title-description">Affiliate Program</h4>
+                <h4 class="fitness-title-description">About Us</h4>
+            </div>
+            <div class="fitness-margin">
+                <h2 class="fitness-title">Get Started</h2>
+                <h4 class="fitness-title-description">Service</h4>
+                <h4 class="fitness-title-description">Contact Us</h4>
+                <h4 class="fitness-title-description">Affiliate Program</h4>
+                <h4 class="fitness-title-description">About Us</h4>
+            </div>
+        </div>
     </footer>
 
 </body>
