--- a/index.html
+++ b/index.html
@@ -212,14 +212,93 @@
         <!-- Membership section starts here -->
         <section>
             <div>
-                <h1 class="fitness" style="text-align: center; background-color: #FFFFFF80; text-shadow: 2px 2px 5px black;" ><i>Fitness Membership</i></h1>
+                <h1 class="fitness" style="text-align: center; background-color: #FFFFFF1A; text-shadow: 2px 2px 5px black; width: max-content; margin: 0 auto;" ><i>Fitness Membership</i></h1>
             </div>
-            <div class="membership-card">
-                <h2>Pass'Trial'</h2>
-                <h2>$0</h2>
-                <h3></h3>
-                <h3></h3>
-                <button type="button">Buy</button>
+            <div class="membership-offers">
+                <div class="membership-card">
+                    <h2 class="pakage-title">Pass'Trial'</h2>
+                    <h2 class="pakage-title">$0</h2>
+                    <br>
+                    <hr>
+                    <br>
+                    <ul class="service">
+                        <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
+                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym</li>
+                    </ul>
+                    <div class="purchase">
+                        <button class="buy-button" type="button">Buy</button>
+                    </div>
+                </div>
+                <div class="membership-card">
+                    <h2 class="pakage-title">Pass'Trial'</h2>
+                    <h2 class="pakage-title">$0</h2>
+                    <br>
+                    <hr>
+                    <br>
+                    <ul class="service">
+                        <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
+                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym</li>
+                    </ul>
+                    <div class="purchase">
+                        <button class="buy-button" type="button">Buy</button>
+                    </div>
+                </div>
+                <div class="membership-card">
+                    <h2 class="pakage-title">Pass'Trial'</h2>
+                    <h2 class="pakage-title">$0</h2>
+                    <br>
+                    <hr>
+                    <br>
+                    <ul class="service">
+                        <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
+                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym</li>
+                    </ul>
+                    <div class="purchase">
+                        <button class="buy-button" type="button">Buy</button>
+                    </div>
+                </div>
+                <div class="membership-card">
+                    <h2 class="pakage-title">Pass'Trial'</h2>
+                    <h2 class="pakage-title">$0</h2>
+                    <br>
+                    <hr>
+                    <br>
+                    <ul class="service">
+                        <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
+                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym</li>
+                    </ul>
+                    <div class="purchase">
+                        <button class="buy-button" type="button">Buy</button>
+                    </div>
+                </div>
+                <div class="membership-card">
+                    <h2 class="pakage-title">Pass'Trial'</h2>
+                    <h2 class="pakage-title">$0</h2>
+                    <br>
+                    <hr>
+                    <br>
+                    <ul class="service">
+                        <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
+                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym</li>
+                    </ul>
+                    <div class="purchase">
+                        <button class="buy-button" type="button">Buy</button>
+                    </div>
+                </div>
+                <div class="membership-card">
+                    <h2 class="pakage-title">Pass'Trial'</h2>
+                    <h2 class="pakage-title">$0</h2>
+                    <br>
+                    <hr>
+                    <br>
+                    <ul class="service">
+                        <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
+                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym</li>
+                    </ul>
+                    <div class="purchase">
+                        <button class="buy-button" type="button">Buy</button>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
